--- a/Gunslinger/app/src/main/res/values/strings.xml
+++ b/Gunslinger/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Gunslinger</string>
     <string name="main_activity_name">The end of the Path </string>
-    <string name="text_dialog_window">Are you sure want to exit?</string>
+    <string name="text_dialog_window">Are you sure you want to exit?</string>
     <string name="dialog_yes_button">Yes</string>
     <string name="dialog_no_button">No</string>
 </resources>
